refactor:remove implementations from workoutService inside of UserServiceImpl